Revert r254537. rdar://problem/58542040
Canonical link: https://commits.webkit.org/219244.7@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@254650 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,7 @@
+2020-01-15  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Revert r254537. rdar://problem/58542040
+
 2020-01-14  Kocsen Chung  <kocsen_chung@apple.com>
 
         Revert r254334. rdar://problem/58542040
