--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,32 @@
+2020-01-21  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r254125. rdar://problem/58353217
+
+    Fix non GPUProcess build issue in UserMediaCaptureManager
+    https://bugs.webkit.org/show_bug.cgi?id=205851
+    
+    Reviewed by Eric Carlson.
+    
+    Build fix, no change of behavior.
+    
+    * WebProcess/cocoa/UserMediaCaptureManager.cpp:
+    (WebKit::UserMediaCaptureManager::Source::connection):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254125 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-07  youenn fablet  <youenn@apple.com>
+
+            Fix non GPUProcess build issue in UserMediaCaptureManager
+            https://bugs.webkit.org/show_bug.cgi?id=205851
+
+            Reviewed by Eric Carlson.
+
+            Build fix, no change of behavior.
+
+            * WebProcess/cocoa/UserMediaCaptureManager.cpp:
+            (WebKit::UserMediaCaptureManager::Source::connection):
+
 2020-01-17  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r254433. rdar://problem/58686757
