--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,9 @@
+2020-01-22  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.26.3 release
+
+        * gtk/NEWS: Add release notes for 2.26.3.
+
 2020-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [SOUP] HSTS Support causes page loading to fail with "Operation was cancelled"
