--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,43 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254484. rdar://problem/58606285
+
+    RenderTreeBuilder::Block::attachIgnoringContinuation should handle inline-block anonymous containers.
+    https://bugs.webkit.org/show_bug.cgi?id=202913
+    <rdar://problem/56233694>
+    
+    Reviewed by Simon Fraser.
+    
+    Source/WebCore:
+    
+    When the before child happens to be a block level box wrapped in an anonymous inline-block (e.g. ruby),
+    let's attach this new child before the anonymous inline-block wrapper instead.
+    
+    Test: fast/ruby/before-child-is-block-after.html
+    
+    * rendering/updating/RenderTreeBuilderBlock.cpp:
+    (WebCore::RenderTreeBuilder::Block::attachIgnoringContinuation):
+    
+    LayoutTests:
+    
+    * fast/ruby/before-child-is-block-after-expected.txt: Added.
+    * fast/ruby/before-child-is-block-after.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254484 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-13  Zalan Bujtas  <zalan@apple.com>
+
+            RenderTreeBuilder::Block::attachIgnoringContinuation should handle inline-block anonymous containers.
+            https://bugs.webkit.org/show_bug.cgi?id=202913
+            <rdar://problem/56233694>
+
+            Reviewed by Simon Fraser.
+
+            * fast/ruby/before-child-is-block-after-expected.txt: Added.
+            * fast/ruby/before-child-is-block-after.html: Added.
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254408. rdar://problem/58606270
 
     [WebCore] Fix crash in module loader due to change in fragment reservation
