--- a/Source/WebInspectorUI/ChangeLog
+++ b/Source/WebInspectorUI/ChangeLog
@@ -1,3 +1,38 @@
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254485. rdar://problem/58606245
+
+    Web Inspector: "Enable Local Override" and "Delete Local Override" are displayed twice in the contextual menu
+    https://bugs.webkit.org/show_bug.cgi?id=206184
+    <rdar://problem/58409880>
+    
+    Reviewed by Brian Burg.
+    
+    * UserInterface/Views/ContextMenuUtilities.js:
+    (WI.appendContextMenuItemsForSourceCode):
+    * UserInterface/Views/LocalResourceOverrideTreeElement.js:
+    (WI.LocalResourceOverrideTreeElement.prototype.populateContextMenu):
+    Add an expando flag  that can be set by `WI.LocalResourceOverrideTreeElement` to ensure that
+    the local override context menu items aren't added again by `WI.ResourceTreeElement`.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254485 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-13  Devin Rousso  <drousso@apple.com>
+
+            Web Inspector: "Enable Local Override" and "Delete Local Override" are displayed twice in the contextual menu
+            https://bugs.webkit.org/show_bug.cgi?id=206184
+            <rdar://problem/58409880>
+
+            Reviewed by Brian Burg.
+
+            * UserInterface/Views/ContextMenuUtilities.js:
+            (WI.appendContextMenuItemsForSourceCode):
+            * UserInterface/Views/LocalResourceOverrideTreeElement.js:
+            (WI.LocalResourceOverrideTreeElement.prototype.populateContextMenu):
+            Add an expando flag  that can be set by `WI.LocalResourceOverrideTreeElement` to ensure that
+            the local override context menu items aren't added again by `WI.ResourceTreeElement`.
+
 2020-01-15  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r254058. rdar://problem/58606175
