--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,40 @@
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254523. rdar://problem/58606225
+
+    Web Inspector: crash in DumpRenderTree at com.apple.JavaScriptCore: WTF::RefCountedBase::hasOneRef const
+    https://bugs.webkit.org/show_bug.cgi?id=206191
+    <rdar://problem/58415623>
+    
+    Reviewed by Joseph Pecoraro.
+    
+    * debugger/Debugger.cpp:
+    (JSC::Debugger::attach):
+    (GatherSourceProviders::GatherSourceProviders): Deleted.
+    (GatherSourceProviders::operator()): Deleted.
+    Use `RefPtr<SourceProvider>` instead of `SourceProvider*` in case the `FunctionExecutable`
+    is destroyed after the `SourceProvider*` is saved, which would destroy the `SourceProvider`
+    as well.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254523 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-14  Devin Rousso  <drousso@apple.com>
+
+            Web Inspector: crash in DumpRenderTree at com.apple.JavaScriptCore: WTF::RefCountedBase::hasOneRef const
+            https://bugs.webkit.org/show_bug.cgi?id=206191
+            <rdar://problem/58415623>
+
+            Reviewed by Joseph Pecoraro.
+
+            * debugger/Debugger.cpp:
+            (JSC::Debugger::attach):
+            (GatherSourceProviders::GatherSourceProviders): Deleted.
+            (GatherSourceProviders::operator()): Deleted.
+            Use `RefPtr<SourceProvider>` instead of `SourceProvider*` in case the `FunctionExecutable`
+            is destroyed after the `SourceProvider*` is saved, which would destroy the `SourceProvider`
+            as well.
+
 2020-01-21  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r254632. rdar://problem/58764714
