--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,44 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254541. rdar://problem/58605951
+
+    Supported mime types for encoding should be supported mime types for loading
+    https://bugs.webkit.org/show_bug.cgi?id=206239
+    
+    Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2020-01-14
+    Reviewed by Simon Fraser.
+    
+    Source/WebCore:
+    
+    Consult isSupportedImageType() for the system supported UTI before
+    considering its mime type is allowed for the image DataURL encoding.
+    
+    Test: fast/canvas/toDataURL-unsupportedTypes.html
+    
+    * platform/MIMETypeRegistry.cpp:
+    (WebCore::MIMETypeRegistry::createMIMETypeRegistryThreadGlobalData):
+    
+    LayoutTests:
+    
+    * fast/canvas/toDataURL-unsupportedTypes-expected.txt: Added.
+    * fast/canvas/toDataURL-unsupportedTypes.html: Added.
+    Unsupported mime-types for encoding should fall back to 'image/png'.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254541 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-14  Said Abou-Hallawa  <sabouhallawa@apple.com>
+
+            Supported mime types for encoding should be supported mime types for loading
+            https://bugs.webkit.org/show_bug.cgi?id=206239
+
+            Reviewed by Simon Fraser.
+
+            * fast/canvas/toDataURL-unsupportedTypes-expected.txt: Added.
+            * fast/canvas/toDataURL-unsupportedTypes.html: Added.
+            Unsupported mime-types for encoding should fall back to 'image/png'.
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254530. rdar://problem/58606272
 
     [iOS] fast/forms/contenteditable-font-optical-size.html landed flaky
