--- a/Source/WebInspectorUI/ChangeLog
+++ b/Source/WebInspectorUI/ChangeLog
@@ -1,5 +1,38 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254633. rdar://problem/58816370
+
+    Web Inspector: collapsing a virtualized folder in a `WI.TreeOutline` doesn't updated the DOM
+    https://bugs.webkit.org/show_bug.cgi?id=206302
+    
+    Reviewed by Timothy Hatcher.
+    
+    * UserInterface/Views/TreeOutline.js:
+    (WI.TreeOutline.prototype._updateVirtualizedElements):
+    When collapsing a currently visible `WI.TreeElement`, it will still be in the cached set of
+    visible and attached `WI.TreeElement`s, meaning that `_updateVirtualizedElements` will early
+    return since it thinks that the same `WI.TreeElement` are being shown. Add another check to
+    ensure that it only thinks that if the same number of `WI.TreeElement` are visible.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254633 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-15  Devin Rousso  <drousso@apple.com>
+
+            Web Inspector: collapsing a virtualized folder in a `WI.TreeOutline` doesn't updated the DOM
+            https://bugs.webkit.org/show_bug.cgi?id=206302
+
+            Reviewed by Timothy Hatcher.
+
+            * UserInterface/Views/TreeOutline.js:
+            (WI.TreeOutline.prototype._updateVirtualizedElements):
+            When collapsing a currently visible `WI.TreeElement`, it will still be in the cached set of
+            visible and attached `WI.TreeElement`s, meaning that `_updateVirtualizedElements` will early
+            return since it thinks that the same `WI.TreeElement` are being shown. Add another check to
+            ensure that it only thinks that if the same number of `WI.TreeElement` are visible.
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254485. rdar://problem/58606245
 
     Web Inspector: "Enable Local Override" and "Delete Local Override" are displayed twice in the contextual menu
