--- a/JSTests/ChangeLog
+++ b/JSTests/ChangeLog
@@ -1,3 +1,40 @@
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254687. rdar://problem/58811365
+
+    operationToObject() should check for a null errorMessage.
+    https://bugs.webkit.org/show_bug.cgi?id=206339
+    <rdar://problem/58449666>
+    
+    Reviewed by Yusuke Suzuki.
+    
+    JSTests:
+    
+    * stress/operationToObject-should-check-for-null-errorMessage.js: Added.
+    
+    Source/JavaScriptCore:
+    
+    r224280 introduced operationToObject() with an option to specify a custom error
+    message.  r254252 added a scenario where the passed in error message is null but
+    did not update operationToObject() to allow for this.  This patch adds the
+    missing null check.
+    
+    * dfg/DFGOperations.cpp:
+    
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254687 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Mark Lam  <mark.lam@apple.com>
+
+            operationToObject() should check for a null errorMessage.
+            https://bugs.webkit.org/show_bug.cgi?id=206339
+            <rdar://problem/58449666>
+
+            Reviewed by Yusuke Suzuki.
+
+            * stress/operationToObject-should-check-for-null-errorMessage.js: Added.
+
 2020-01-21  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r254632. rdar://problem/58764714
