--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,47 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254687. rdar://problem/58811365
+
+    operationToObject() should check for a null errorMessage.
+    https://bugs.webkit.org/show_bug.cgi?id=206339
+    <rdar://problem/58449666>
+    
+    Reviewed by Yusuke Suzuki.
+    
+    JSTests:
+    
+    * stress/operationToObject-should-check-for-null-errorMessage.js: Added.
+    
+    Source/JavaScriptCore:
+    
+    r224280 introduced operationToObject() with an option to specify a custom error
+    message.  r254252 added a scenario where the passed in error message is null but
+    did not update operationToObject() to allow for this.  This patch adds the
+    missing null check.
+    
+    * dfg/DFGOperations.cpp:
+    
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254687 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Mark Lam  <mark.lam@apple.com>
+
+            operationToObject() should check for a null errorMessage.
+            https://bugs.webkit.org/show_bug.cgi?id=206339
+            <rdar://problem/58449666>
+
+            Reviewed by Yusuke Suzuki.
+
+            r224280 introduced operationToObject() with an option to specify a custom error
+            message.  r254252 added a scenario where the passed in error message is null but
+            did not update operationToObject() to allow for this.  This patch adds the
+            missing null check.
+
+            * dfg/DFGOperations.cpp:
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254523. rdar://problem/58606225
 
     Web Inspector: crash in DumpRenderTree at com.apple.JavaScriptCore: WTF::RefCountedBase::hasOneRef const
