--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,45 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254710. rdar://problem/58807942
+
+    [WebAuthn] User Verification (UV) option present on a CTAP2 authenticatorMakeCredential while the authenticator has not advertised support for it
+    https://bugs.webkit.org/show_bug.cgi?id=204111
+    <rdar://problem/57019604>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebCore:
+    
+    Covered by API tests.
+    
+    * Modules/webauthn/fido/DeviceRequestConverter.cpp:
+    (fido::encodeMakeCredenitalRequestAsCBOR):
+    (fido::encodeGetAssertionRequestAsCBOR):
+    Only set UV if RP requires it.
+    
+    Tools:
+    
+    * TestWebKitAPI/Tests/WebCore/CtapRequestTest.cpp:
+    (TestWebKitAPI::TEST):
+    * TestWebKitAPI/Tests/WebCore/FidoTestData.h:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254710 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] User Verification (UV) option present on a CTAP2 authenticatorMakeCredential while the authenticator has not advertised support for it
+            https://bugs.webkit.org/show_bug.cgi?id=204111
+            <rdar://problem/57019604>
+
+            Reviewed by Brent Fulgham.
+
+            * TestWebKitAPI/Tests/WebCore/CtapRequestTest.cpp:
+            (TestWebKitAPI::TEST):
+            * TestWebKitAPI/Tests/WebCore/FidoTestData.h:
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254296. rdar://problem/58606275
 
     Resource Load Statistics: Add timing information to WebPageProxy::logFrameNavigation() to detect delayed client-side redirects
