--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,50 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254722. rdar://problem/58811423
+
+    REGRESSION (r251110): Crash on https://developer.apple.com/tutorials/swiftui/creating-and-combining-views
+    https://bugs.webkit.org/show_bug.cgi?id=206337
+    
+    Reviewed by Geoffrey Garen.
+    
+    Source/WebCore:
+    
+    The crash was caused by RadioButtonGroups::hasCheckedButton getting called by RadioInputType's
+    matchesIndeterminatePseudoClass during a style update which happens before the input element had a chance
+    to register itself with RadioButtonGroups in HTMLInputElement::didFinishInsertingNode.
+    
+    This happens, in particular, when didFinishInsertingNode of other nodes that appear before the input element
+    executes arbitrary author scripts or otherwise update the style.
+    
+    Test: fast/forms/match-pseudo-on-radio-before-finalizing-tree-insertion-crash.html
+    
+    * dom/RadioButtonGroups.cpp:
+    (WebCore::RadioButtonGroups::hasCheckedButton const):
+    
+    LayoutTests:
+    
+    Added a regression test. The test crashes on trunk and causes an infinite loop before r251110.
+    
+    * fast/forms/match-pseudo-on-radio-before-finalizing-tree-insertion-crash-expected.txt: Added.
+    * fast/forms/match-pseudo-on-radio-before-finalizing-tree-insertion-crash.html: Added.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254722 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-16  Ryosuke Niwa  <rniwa@webkit.org>
+
+            REGRESSION (r251110): Crash on https://developer.apple.com/tutorials/swiftui/creating-and-combining-views
+            https://bugs.webkit.org/show_bug.cgi?id=206337
+
+            Reviewed by Geoffrey Garen.
+
+            Added a regression test. The test crashes on trunk and causes an infinite loop before r251110.
+
+            * fast/forms/match-pseudo-on-radio-before-finalizing-tree-insertion-crash-expected.txt: Added.
+            * fast/forms/match-pseudo-on-radio-before-finalizing-tree-insertion-crash.html: Added.
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254705. rdar://problem/58811395
 
     REGRESSION: [ Mac WK2 ] fast/text/international/unicode-bidi-other-neutrals.html is a flaky failure
