--- a/Source/WebInspectorUI/ChangeLog
+++ b/Source/WebInspectorUI/ChangeLog
@@ -1,5 +1,42 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254773. rdar://problem/58807954
+
+    Web Inspector: Unchecking Enable Preview Features on Engineering and Preview builds does not affect WI.arePreviewFeaturesEnabled()
+    https://bugs.webkit.org/show_bug.cgi?id=204026
+    
+    Reviewed by Brian Burg.
+    
+    Make `WI.arePreviewFeaturesEnabled()` return false when Enable Preview Features is unchecked.
+    
+    * UserInterface/Base/Setting.js:
+    (WI.canShowPreviewFeatures):
+    (WI.arePreviewFeaturesEnabled):
+    (WI.isTechnologyPreviewBuild): Deleted.
+    (WI.canShowPreviewFeatures): Added.
+    * UserInterface/Views/SettingsTabContentView.js:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254773 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-17  Nikita Vasilyev  <nvasilyev@apple.com>
+
+            Web Inspector: Unchecking Enable Preview Features on Engineering and Preview builds does not affect WI.arePreviewFeaturesEnabled()
+            https://bugs.webkit.org/show_bug.cgi?id=204026
+
+            Reviewed by Brian Burg.
+
+            Make `WI.arePreviewFeaturesEnabled()` return false when Enable Preview Features is unchecked.
+
+            * UserInterface/Base/Setting.js:
+            (WI.canShowPreviewFeatures):
+            (WI.arePreviewFeaturesEnabled):
+            (WI.isTechnologyPreviewBuild): Deleted.
+            (WI.canShowPreviewFeatures): Added.
+            * UserInterface/Views/SettingsTabContentView.js:
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254726. rdar://problem/58816338
 
     REGRESSION(r251487): Web Inspector: selected color in color picker has wrong lightness
