--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,41 @@
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254880. rdar://problem/58816328
+
+    [macOS] Add managed preference to allow synchronous XHR during page dismissal
+    https://bugs.webkit.org/show_bug.cgi?id=206540
+    <rdar://problem/58644447>
+    
+    Reviewed by Alex Christensen.
+    
+    Add managed preference to allow synchronous XHR during page dismissal. This is temporarily needed by some
+    enterprise products until they can update their code.
+    
+    * Shared/WebPreferences.yaml:
+    * Shared/WebPreferencesDefaultValues.cpp:
+    (WebKit::defaultDisallowSyncXHRDuringPageDismissalEnabled):
+    * Shared/WebPreferencesDefaultValues.h:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254880 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-21  Chris Dumez  <cdumez@apple.com>
+
+            [macOS] Add managed preference to allow synchronous XHR during page dismissal
+            https://bugs.webkit.org/show_bug.cgi?id=206540
+            <rdar://problem/58644447>
+
+            Reviewed by Alex Christensen.
+
+            Add managed preference to allow synchronous XHR during page dismissal. This is temporarily needed by some
+            enterprise products until they can update their code.
+
+            * Shared/WebPreferences.yaml:
+            * Shared/WebPreferencesDefaultValues.cpp:
+            (WebKit::defaultDisallowSyncXHRDuringPageDismissalEnabled):
+            * Shared/WebPreferencesDefaultValues.h:
+
+2020-01-23  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254874. rdar://problem/58816330
 
     macCatalyst: Two-finger click is dispatched to DOM as left click
