--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,35 @@
+2020-01-27  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254546. rdar://problem/58811346
+
+    REGRESSION: fast/shadow-dom/link-element-in-shadow-tree.html is flaky
+    https://bugs.webkit.org/show_bug.cgi?id=171784
+    <rdar://problem/58123584>
+    
+    Reviewed by Antti Koivisto.
+    
+    The timeout is likely caused by the stylesheet not loading within 100ms timeout in the very first test case.
+    Load and cache the stylesheet before any test cases run to avoid this timeout.
+    
+    * fast/shadow-dom/link-element-in-shadow-tree.html:
+    * platform/mac-wk2/TestExpectations: Removed the flaky test expectation.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254546 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-14  Ryosuke Niwa  <rniwa@webkit.org>
+
+            REGRESSION: fast/shadow-dom/link-element-in-shadow-tree.html is flaky
+            https://bugs.webkit.org/show_bug.cgi?id=171784
+            <rdar://problem/58123584>
+
+            Reviewed by Antti Koivisto.
+
+            The timeout is likely caused by the stylesheet not loading within 100ms timeout in the very first test case.
+            Load and cache the stylesheet before any test cases run to avoid this timeout.
+
+            * fast/shadow-dom/link-element-in-shadow-tree.html:
+            * platform/mac-wk2/TestExpectations: Removed the flaky test expectation.
+
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
         Cherry-pick r254841. rdar://problem/58807959
